--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,20 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
 
 PROJECT("http-deliver" VERSION 1.0.0)
 
-SET(CPACK_GENERATOR "DEB")
+# RPM/DEB and CENTOS7/CENTOS8/UBU1804/UBU2004
+FILE(STRINGS /OSRELEASE.txt OSRELEASE)
+
+IF (OSRELEASE MATCHES "CENTOS7")
+	SET(CPACK_GENERATOR "RPM")
+ELSEIF (OSRELEASE MATCHES "CENTOS8")
+	SET(CPACK_GENERATOR "RPM")
+ELSEIF (OSRELEASE MATCHES "UBU1804")
+	SET(CPACK_GENERATOR "DEB")
+ELSEIF (OSRELEASE MATCHES "UBU2004")
+	SET(CPACK_GENERATOR "DEB")
+ELSE()
+	MESSAGE(FATAL_ERROR "Invalid OSRELEASE")
+ENDIF()
 
 SET(CMAKE_BUILD_TYPE Release)
 SET(CMAKE_CXX_FLAGS_RELEASE "-std=c++17 -Wall -Wvla -Wshadow -Wconversion -Wno-sign-conversion -Wno-c++11-narrowing -O2 -fno-strict-aliasing -Wextra -Wno-unused-parameter")
@@ -30,25 +43,17 @@ ENDIF()
 
 INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/http-deliver.so DESTINATION plugins)
 
-IF(${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.14.0") 
-	FILE(CREATE_LINK "/opt/halon/plugins/http-deliver.so" "${CMAKE_CURRENT_BINARY_DIR}/http-deliver.so.link" SYMBOLIC)
-ELSE()
-	ADD_CUSTOM_TARGET(link_target ALL COMMAND ${CMAKE_COMMAND} -E create_symlink "/opt/halon/plugins/http-deliver.so" "${CMAKE_CURRENT_BINARY_DIR}/http-deliver.so.link")
-ENDIF()
-
-INSTALL(FILES "${CMAKE_CURRENT_BINARY_DIR}/http-deliver.so.link" DESTINATION plugins/autoload/smtpd RENAME http-deliver.so)
-
 INSTALL(FILES "LICENSE" DESTINATION share/doc/plugins/http-deliver)
 
 SET(CPACK_PACKAGING_INSTALL_PREFIX "/opt/halon")
 IF (CPACK_GENERATOR MATCHES "DEB")
 	SET(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
-	SET(CPACK_DEBIAN_PACKAGE_DEPENDS "halon (>= 5.8)")
+	SET(CPACK_DEBIAN_PACKAGE_DEPENDS "halon (>= 5.7)")
 	SET(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_CURRENT_SOURCE_DIR}/postinst;${CMAKE_CURRENT_SOURCE_DIR}/postrm")
 ENDIF()
 IF (CPACK_GENERATOR MATCHES "RPM")
 	SET(CPACK_RPM_PACKAGE_AUTOREQPROV ON)
-	SET(CPACK_RPM_PACKAGE_REQUIRES "halon >= 5.8")
+	SET(CPACK_RPM_PACKAGE_REQUIRES "halon >= 5.7")
 	SET(CPACK_RPM_POST_INSTALL_SCRIPT_FILE "${CMAKE_CURRENT_SOURCE_DIR}/postinst")
 	SET(CPACK_RPM_POST_UNINSTALL_SCRIPT_FILE "${CMAKE_CURRENT_SOURCE_DIR}/postrm")
 ENDIF()
