--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,7 +53,9 @@ IF(${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.14.0")
 
 INSTALL(FILES "LICENSE" DESTINATION share/doc/plugins/http-deliver)
 
+SET(CMAKE_INSTALL_PREFIX "/opt/halon")
 SET(CPACK_PACKAGING_INSTALL_PREFIX "/opt/halon")
+
 IF (CPACK_GENERATOR MATCHES "DEB")
 	SET(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
 	SET(CPACK_DEBIAN_PACKAGE_DEPENDS "halon (>= 5.7)")
