--- a/.devcontainer/supervisord.conf
+++ b/.devcontainer/supervisord.conf
@@ -5,3 +5,6 @@ loglevel=info
 [program:smtpd]
 command=/opt/halon/sbin/smtpd -f
 environment=LD_LIBRARY_PATH="/opt/halon/lib/:%(ENV_LD_LIBRARY_PATH)s"
+
+[program:http]
+command=python3 -m http.server 8080
